--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ngx-quill",
   "license": "MIT",
-  "version": "7.4.0",
+  "version": "7.4.0-dev",
   "author": {
     "name": "Bengt Weiße"
   },
@@ -52,7 +52,7 @@
     "@angular/core": "^7.0.0 || ^8.0.0 || ^9.0.0",
     "@angular/forms": "^7.0.0 || ^8.0.0 || ^9.0.0",
     "@angular/platform-browser": "^7.0.0 || ^8.0.0 || ^9.0.0",
-    "quill": "^1.3.6",
+    "quill": "^2.0.0-dev.3",
     "rxjs": "^6.4.0 || ^6.5.0"
   },
   "devDependencies": {
@@ -65,7 +65,7 @@
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@types/jasmine": "^3.5.3",
     "@types/node": "^13.7.0",
-    "@types/quill": "^1.3.10",
+    "@types/quill": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "ajv": "^6.11.0",
@@ -85,7 +85,7 @@
     "loader-utils": "^1.2.3",
     "ng-packagr": "^9.0.0",
     "puppeteer": "^2.1.1",
-    "quill": "^1.3.7",
+    "quill": "^2.0.0-dev.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
     "source-map-loader": "^0.2.4",
